[package]
name = "quotebox"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.79"
axum = { version = "0.7.4", features = ["query"] }
futures = "0.3.30"
itertools = "0.12.0"
serde = { version = "1.0.195", features = ["derive"] }
tokio = { version = "1.35.1", features = ["full"] }

[dependencies.mongodb]
version = "2.8.0"
features = ["tokio-runtime"]
